# cpp-algorithm-training

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/algorithms/sorting/: bubble_sort.cpp  quick_sort.cpp  sorting.hpp
